# cmake-bandit-sample

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  main.cpp
include/: fraction.h  mathlib.h
src/: fraction.cpp  mathlib.cpp
test/: FractionTest.cpp  main.cpp
